--- a/style.css
+++ b/style.css
@@ -3,78 +3,45 @@
     padding: 0;
     margin: 0;
 }
-.container{
-    display: flex;
-    flex-direction: row;
-    padding: 15px;
-    max-width: 100%;
-    width: 150vh;
-    height: 80vh;
-    margin: 0 auto;
-    background-color: rgb(207, 207, 205);
+body{
+    background-image: url('img/bd.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.centrer{
-     border-radius: 10px;
-     align-items: center;
-    justify-content: center;
-     display: flex;
-    flex: 1;  
-    }
-#center{
-    
-    background-color: rgb(241, 237, 237);
-    }
-.Succ{
-    background-color: rgb(14, 107, 14);
-    }
-.Dan{
-     background-color: rgb(173, 25, 25);
-    }
-.War{
-     background-color: rgb(185, 155, 19);
-    }
-.Info{
-      background-color: rgb(24, 129, 163)
-    }
-button{
-     padding: 1%;
-     margin: 0.5%;
-    height: 30%;
-    color: white;
-    font-size: 1.2em;
-     border-radius: 10px;
-    border: none;
-
-    }
- #note{
-     display: flex;
-    flex: 2;
-    flex-direction: column;
-    }
- .flex{
-    height: 10vh;
-     display: flex;
-     margin: 3px;
-     /* border: 2px solid black; */
-    border-radius: 10px;
-    justify-content: center;
-    align-items: end; 
-
+#container{
+    position: relative;
+    width: 60%;
+    height: 60vh;
+    border: 1px solid black;
+    display: inline-block;
+    margin-left: 20%;
+    margin-top: 10%;
+    box-shadow: 1em 2em 3em black;   
 }
-.green{
-    background-color: rgb(11, 206, 11);
-    }
- #creernewdiv{
-     flex: 1;
-    display: flex;
-     flex-direction: column;
-    justify-content: flex-end;
-    }
- #btn_button{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    }
- #note{
-    flex: 2;
- }
+#container .Precedent{
+    position: absolute;
+    top: 35%;
+    right: 0;
+    font-size: 120px;
+    color: #87dfe9;
+    cursor: pointer;
+}
+#container .Suivant{
+    position: absolute;
+    top: 35%;
+    left: 0;
+    font-size: 120px;
+    color: #87dfe9;
+    cursor: pointer;
+}
+#container .header{
+        opacity: 0.5;
+        color: red;
+}
+#container img{
+    width:100% ;
+    height:100% ;  
+}
+img:hover{
+    transform: scale(1.1);
+}
