--- a/style.css
+++ b/style.css
@@ -1,47 +1,81 @@
+
 *{
-    box-sizing: 0;
-    padding: 0;
-    margin: 0;
+    box-sizing: border-box;
 }
+
 body{
-    background-image: url('img/bd.jpg');
+    background-image: url('./img/count.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
+    color: #fff;
+    font-family: 'Ubuntu', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 0;
+    overflow: hidden; 
 }
-#container{
-    position: relative;
-    width: 60%;
-    height: 60vh;
-    border: 1px solid black;
-    display: inline-block;
-    margin-left: 20%;
-    margin-top: 10%;
-    box-shadow: 1em 2em 3em black;   
-}
-#container .Precedent{
+body::after{
+    content: '';
     position: absolute;
-    top: 35%;
-    right: 0;
-    font-size: 120px;
-    color: #87dfe9;
-    cursor: pointer;
-}
-#container .Suivant{
-    position: absolute;
-    top: 35%;
+    top: 0;
     left: 0;
-    font-size: 120px;
-    color: #87dfe9;
-    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.2);
 }
-#container .header{
-        opacity: 0.5;
-        color: red;
+
+h1{
+    font-size: 60px;
+    margin: -80px 0 40px;
+    color: black;
 }
-#container img{
-    width:100% ;
-    height:100% ;  
+
+.count{
+    display: flex;
+    transform: scale(2); 
 }
-img:hover{
-    transform: scale(1.1);
+
+.time{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 15px;
+    color: black;
+    font-size: 35px;
+    font-weight: 900;
+    background-color: rgb(0, 153, 255);
+    width: 70%;
+    height: 10vh;
 }
+
+.time h2{
+    margin: 0 0 5px;
+}
+
+@media(max-width: 600px){
+    h1{
+        font-size: 45px;
+    }
+    .time{
+        margin: 5px;
+    }
+    .time h2{
+        font-size: 10px;
+        margin: 0;
+    }
+    .time small{
+        font-size: 10px;
+    }
+}
+
+
+
+#year{
+    opacity: 0.2;
+    transform: translateX(-50%);
+} 
