--- a/style.css
+++ b/style.css
@@ -1,81 +1,112 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
 
 *{
     box-sizing: border-box;
 }
 
+:root{
+    --primary-color:#22254b;
+    --secondary-color: #373b69;
+}
+
 body{
-    background-image: url('./img/count.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    color: #fff;
-    font-family: 'Ubuntu', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    background-color: var(--primary-color);
+    font-family: 'Poppins', sans-serif;
     margin: 0;
-    overflow: hidden; 
-}
-body::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.2);
 }
 
-h1{
-    font-size: 60px;
-    margin: -80px 0 40px;
-    color: black;
+
+header{
+    padding:1rem;
+    display:flex;
+    justify-content: flex-end;
+    background-color: var(--secondary-color);
 }
 
-.count{
-    display: flex;
-    transform: scale(2); 
+.search{
+    background-color: transparent;
+    border: 2px solid var(--primary-color);
+    padding:0.5rem 1rem;
+    border-radius: 50px;
+    font-size: 1rem;
+    color:#fff;
+    font-family: inherit;
 }
 
-.time{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.search:focus{
+    outline:0;
+    background-color: var(--primary-color);
+}
+
+.search::placeholder{
+    color: #7378c5;
+}
+
+main{
+    display:flex;
+    flex-wrap: wrap;
     justify-content: center;
-    margin: 15px;
-    color: black;
-    font-size: 35px;
-    font-weight: 900;
-    background-color: rgb(0, 153, 255);
-    width: 70%;
-    height: 10vh;
 }
 
-.time h2{
-    margin: 0 0 5px;
-}
-
-@media(max-width: 600px){
-    h1{
-        font-size: 45px;
-    }
-    .time{
-        margin: 5px;
-    }
-    .time h2{
-        font-size: 10px;
-        margin: 0;
-    }
-    .time small{
-        font-size: 10px;
-    }
+.movie {
+    width: 300px;
+    margin: 1rem;
+    border-radius: 3px;
+    box-shadow: 0.2px 4px 5px rgba(0,0,0,0.1);
+    background-color: var(--secondary-color);
+    position:relative;
+    overflow: hidden;
 }
 
 
+.movie img{
+    width:100%;
+}
 
-#year{
-    opacity: 0.2;
-    transform: translateX(-50%);
-} 
+.movie-info{
+    color:#eee;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 1rem;
+    letter-spacing: 0.5px;
+}
+
+.movie-info h3{
+    margin-top: 0;
+}
+
+.movie-info span{
+    background-color: var(--primary-color);
+    padding: 0.25rem 0.5rem;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.movie-info span.green{
+    color:lightgreen;
+}
+
+.movie-info span.orange{
+    color:orange;
+}
+
+.movie-info span.red{
+    color:red;
+}
+
+.overview{
+    position:absolute;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color: #fff;
+    padding: 2rem;
+    max-height: 50%;
+    transform:translateY(101%);
+    transition:transform 0.3s ease-in;
+}
+
+.movie:hover .overview{
+    transform:translateY(0)
+}
