--- a/style.css
+++ b/style.css
@@ -1,112 +1,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
-
 *{
-    box-sizing: border-box;
+    box-sizing: 0;
+    padding: 0;
+    margin: 0;
 }
-
-:root{
-    --primary-color:#22254b;
-    --secondary-color: #373b69;
-}
-
 body{
     background-color: var(--primary-color);
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    overflow-y: scroll;
 }
-
-
-header{
-    padding:1rem;
-    display:flex;
-    justify-content: flex-end;
-    background-color: var(--secondary-color);
+.container{
+    background-color: white;
+    width: 50%;
+    height: 95vh;
+    margin-left: 25%;
+    margin-right: 5%;
+    border: 3px solid rgb(128, 123, 123);
 }
-
-.search{
-    background-color: transparent;
-    border: 2px solid var(--primary-color);
-    padding:0.5rem 1rem;
-    border-radius: 50px;
-    font-size: 1rem;
-    color:#fff;
-    font-family: inherit;
-}
-
-.search:focus{
-    outline:0;
-    background-color: var(--primary-color);
-}
-
-.search::placeholder{
-    color: #7378c5;
-}
-
-main{
-    display:flex;
-    flex-wrap: wrap;
+form{
+    display: flex;
     justify-content: center;
+    align-items: center;
 }
-
-.movie {
-    width: 300px;
-    margin: 1rem;
-    border-radius: 3px;
-    box-shadow: 0.2px 4px 5px rgba(0,0,0,0.1);
-    background-color: var(--secondary-color);
-    position:relative;
-    overflow: hidden;
+.search{
+    padding: 20px;
+    margin-top: 1%;
+    width: 30%;
+   border-radius: 20px;
+   border: 1px solid rgb(150, 147, 147);
+   background-color: aliceblue;
+    
 }
-
-
-.movie img{
-    width:100%;
+#fa-solid{
+    margin-left: 2%;
+   font-size: 40px;
+   color:rgb(150, 147, 147);
 }
-
-.movie-info{
-    color:#eee;
+.recette{
+    background-color: rgb(210, 155, 226);
+    width: 100%;
+    height: 30vh;
+    margin-top: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+.bac{
+    width: 120px;
+    height: 120px;
+    border-radius: 50px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 1rem 1rem;
-    letter-spacing: 0.5px;
+    justify-content: center;
+
 }
 
-.movie-info h3{
-    margin-top: 0;
+.header{
+    background-color: white;
+    width: 90%;
+    height: 40vh;
+    margin-top: 2%;
+    margin-left: 5%;
+    box-shadow: 0,0,0,0.1;
 }
-
-.movie-info span{
-    background-color: var(--primary-color);
-    padding: 0.25rem 0.5rem;
-    border-radius: 3px;
-    font-weight: bold;
+.baniere{
+    width: 100%;
+    height: 40vh;
 }
-
-.movie-info span.green{
-    color:lightgreen;
+.gener{
+    position: relative;
 }
+.generer{
+    margin-top:-40%;
+    background-color: white;
+    width: 35%;
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
 
-.movie-info span.orange{
-    color:orange;
 }
-
-.movie-info span.red{
-    color:red;
+.fresh{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 3%;
 }
-
-.overview{
-    position:absolute;
-    left:0;
-    right:0;
-    bottom:0;
-    background-color: #fff;
-    padding: 2rem;
-    max-height: 50%;
-    transform:translateY(101%);
-    transition:transform 0.3s ease-in;
-}
-
-.movie:hover .overview{
-    transform:translateY(0)
+#fa-heart{
+    margin-left: 30%;
+    font-size: 40px;
+   color:rgb(150, 147, 147);
 }
