--- a/style.css
+++ b/style.css
@@ -1,98 +1,309 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
 *{
-    box-sizing: 0;
-    padding: 0;
-    margin: 0;
+    padding:0px;
+    margin:0px;
+    box-sizing:border-box;
 }
-body{
-    background-color: var(--primary-color);
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    overflow-y: scroll;
+
+
+
+.parent{
+    border:1px solid black ;
+    width:100%;
+    height:100vh;
+    background-color: aqua;
+
 }
-.container{
-    background-color: white;
-    width: 50%;
-    height: 95vh;
-    margin-left: 25%;
-    margin-right: 5%;
-    border: 3px solid rgb(128, 123, 123);
+
+.menu{
+    height:15%;
+    background-color: blue;
+    padding-left:3%;
+    padding-top:1% ;
+    display:none;
+
 }
-form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.fa-trash-can{
+    
+    position:relative ;
+    left:88%;
+    top:90%;
+    color:rgb(7, 58, 9) ;
+    cursor: pointer;
+    
+
 }
-.search{
-    padding: 20px;
-    margin-top: 1%;
-    width: 30%;
-   border-radius: 20px;
-   border: 1px solid rgb(150, 147, 147);
-   background-color: aliceblue;
+.tables{
+    height:85% ;
+    background-color: rgba(235, 232, 229, 0.521);
+    padding-left:3%;
+    padding-top:2% ;
+    display:flex;
+    flex-wrap:wrap ;
+
+}
+.logo{
+
+    position:absolute;
+    top:43%;
+    left:22%;
+    /* width:150px ; */
+   
+}
+
+.table{
+    width:18%;
+    height:95% ;
+    background-color: aquamarine;
+    margin-right:1% ;
+    margin-bottom:5% ;
+    transition-duration:2s ;
+    border-radius:10px ;
+    z-index:1 ;
     
 }
-#fa-solid{
-    margin-left: 2%;
-   font-size: 40px;
-   color:rgb(150, 147, 147);
+.modaletache{
+    width:355px ;
+   
+    height:600px ;
+    background-color:rgba(255, 255, 255, 0.993) ;
+    border-radius:10px ;
+    position:absolute ;
+    border:1px solid black ;
+    top:16%;
+    left:38%;
+    line-height: 80%;
+    border:1px solid black ;
+    
 }
-.recette{
-    background-color: rgb(210, 155, 226);
-    width: 100%;
-    height: 30vh;
-    margin-top: 2%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    justify-content: space-evenly;
+
+.formodal{
+    padding-left:5px;
 }
-.bac{
-    width: 120px;
-    height: 120px;
-    border-radius: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.block{
+    display:block;
+}
+
+
+.inv{
+    display:block;
+}
+.createtable,.createtache{
+    width:95%;
+    height:50px;
+    
+    
+    border:0px solid black ;
+    margin-bottom:0.5% ;
+    padding-left:2% ;
+    padding-top:0.4% ;
+    padding-bottom:0.4% ;
+    
+    display:flex;
+    visibility:hidden;
+    
+
 
 }
 
-.header{
-    background-color: white;
-    width: 90%;
-    height: 40vh;
-    margin-top: 2%;
-    margin-left: 5%;
-    box-shadow: 0,0,0,0.1;
+.white1{
+    background-color:yellow;
+    width:20% ;
 }
-.baniere{
-    width: 100%;
-    height: 40vh;
-}
-.gener{
-    position: relative;
-}
-.generer{
-    margin-top:-40%;
-    background-color: white;
-    width: 35%;
-    height: 8vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
 
+.taches{
+    width:100% ;
+    height:85%;
+    background-color: rgba(5, 14, 14, 0.637);
+    position:absolute ;
+    display:none;
+    top:15%;
+    left:0px;
+    z-index:2;
 }
-.fresh{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: 3%;
+.taches.bloc{
+    display:block;
 }
-#fa-heart{
-    margin-left: 30%;
-    font-size: 40px;
-   color:rgb(150, 147, 147);
+
+.redirect2{
+    margin-left:84.8% ;
+    margin-top:5% ;
 }
+
+.tache1{
+    width:100%;
+    height:8% ;
+    background-color: blue;
+    margin-bottom:2% ;
+}
+
+.createtable:hover,.createtache:hover{
+
+    background-color: rgba(250, 235, 215, 0.644);
+}
+.input{
+    width:100% ;
+    height:5% ;
+    text-align:center;
+}
+.table1{
+    width:100px;
+    height:100% ;
+    border:1px solid 1px solid black ;
+    display:flex;
+    
+}
+
+.sup:hover{
+    color:red ;
+}
+.addcolone{
+    background-color: aqua;
+    width:150px ;
+    border:5px solid white ;
+    border-radius:20px;
+    color: rgb(107, 146, 146);
+}
+
+.titre{
+    width:100% ;
+    height:10% ;
+    padding-top:5% ;
+    background-color:rgba(165, 121, 100, 0.925) ;
+    margin-left:0% ;
+    text-align:center ;
+    color:white;
+}
+.close{
+    position:relative;
+    top:-46px;
+    left:92%;
+    font-size:25px ;
+    cursor: pointer;
+}
+
+.addnote{
+    background-color: aqua;
+    width:150px ;
+    border:5px solid white ;
+    border-radius:20px;
+}
+
+.none{
+    display:none;
+}
+.p1{
+    width:7px;
+    height:30px ;
+    background-color:black ;
+    margin-right:1% ;
+    border-top-left-radius:100px ;
+    border-top-right-radius:100px ;
+}
+
+.top{
+    margin-top:10% ;
+}
+
+
+
+
+.bplus{
+    position:absolute ;
+    top:88%;
+    width:100px ;
+    height:100px ;
+    margin-left:0.4% ;
+}
+
+input,.btnajout,textarea{
+    width:95%;
+}
+
+.btnajout{
+    height:40px ;
+    background-color: rgba(165, 121, 100, 0.925);
+    color:white ;
+    border-radius:10px ;
+    font-size:15px ;
+}
+
+.animation{
+    width:200px ;
+    height:200px ;
+    background-color: blue;
+    position:absolute ;
+    top:200px;
+    left:500px;
+}
+.moduleanime {
+	-webkit-animation: scale-up-br 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: scale-up-br 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+ @keyframes moduleanime {
+    0% {
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+      -webkit-transform-origin: 100% 100%;
+              transform-origin: 100% 100%;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-transform-origin: 100% 100%;
+              transform-origin: 100% 100%;
+    }
+  }
+  @keyframes scale-up-br {
+    0% {
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+      -webkit-transform-origin: 100% 100%;
+              transform-origin: 100% 100%;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-transform-origin: 100% 100%;
+              transform-origin: 100% 100%;
+    }
+  }
+  
+  .animemenu {
+	-webkit-animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+	        animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+}
+@keyframes animemenu{
+    0% {
+      -webkit-transform: scale(2);
+              transform: scale(2);
+      -webkit-filter: blur(4px);
+              filter: blur(4px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  @keyframes puff-in-center {
+    0% {
+      -webkit-transform: scale(2);
+              transform: scale(2);
+      -webkit-filter: blur(4px);
+              filter: blur(4px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  
