--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 
 
 
-.parent{
+.container{
     border:1px solid black ;
     width:100%;
     height:100vh;
-    background-color: aqua;
+    background-image: url(img/banniere.jpg);
 
 }
 
@@ -47,7 +47,7 @@
     position:absolute;
     top:43%;
     left:22%;
-    /* width:150px ; */
+    width:150px ;
    
 }
 
@@ -64,16 +64,15 @@
 }
 .modaletache{
     width:355px ;
-   
     height:600px ;
     background-color:rgba(255, 255, 255, 0.993) ;
-    border-radius:10px ;
+    border-radius:15px ;
     position:absolute ;
-    border:1px solid black ;
+    /* border:1px solid black ; */
     top:16%;
     left:38%;
     line-height: 80%;
-    border:1px solid black ;
+    border:2px solid rgb(17, 16, 16);
     
 }
 
@@ -159,8 +158,9 @@
     color:red ;
 }
 .addcolone{
-    background-color: aqua;
+    background-color: rgb(198, 209, 209);
     width:150px ;
+    height: 5vh;
     border:5px solid white ;
     border-radius:20px;
     color: rgb(107, 146, 146);
@@ -184,8 +184,9 @@
 }
 
 .addnote{
-    background-color: aqua;
+    background-color:rgb(198, 209, 209);
     width:150px ;
+    height: 5vh;
     border:5px solid white ;
     border-radius:20px;
 }
